Changed getInstance to getDeclaredConstructor getInstance for Java 9